--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,9 @@
     "typescript": "5.8.3"
   },
   "dependencies": {
-    "express": "5.1.0"
+    "dotenv": "^16.5.0",
+    "express": "5.1.0",
+    "mysql2": "^3.14.1",
+    "picocolors": "^1.1.1"
   }
 }
