--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,13 +13,16 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/bcrypt": "5.0.2",
     "@types/express": "5.0.2",
     "typescript": "5.8.3"
   },
   "dependencies": {
-    "dotenv": "^16.5.0",
+    "bcrypt": "6.0.0",
+    "dotenv": "16.5.0",
     "express": "5.1.0",
-    "mysql2": "^3.14.1",
-    "picocolors": "^1.1.1"
+    "mysql2": "3.14.1",
+    "picocolors": "1.1.1",
+    "zod": "3.25.20"
   }
 }
