--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/bcrypt": "5.0.2",
     "@types/express": "5.0.2",
+    "@types/node": "22.15.21",
     "typescript": "5.8.3"
   },
   "dependencies": {
@@ -24,5 +25,10 @@
     "mysql2": "3.14.1",
     "picocolors": "1.1.1",
     "zod": "3.25.20"
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "none"
   }
 }
