--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "js-cookie": "^3.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1"
   },
   "devDependencies": {
     "@eslint/js": "9.25.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-router-dom": "^5.3.3",
@@ -28,7 +31,7 @@
     "typescript-eslint": "^8.30.1",
     "vite": "6.3.5"
   },
-    "prettier": {
+  "prettier": {
     "semi": false,
     "singleQuote": true,
     "trailingComma": "none"
